<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/units_ms"
        android:title="@string/speed_m_s"
        android:icon="@drawable/ic_arrow_drop_down_black_24dp"/>

    <item
        android:id="@+id/units_kmh"
        android:title="@string/speed_km_h"
        android:icon="@drawable/ic_arrow_drop_down_black_24dp"/>
</menu>