<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_arrow_drop_down_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_units"
        android:icon="@drawable/ic_motorcycle_black_24dp"
        android:title="@string/title_units" />

    <item
        android:id="@+id/navigation_gps"
        android:checkable="false"
        android:icon="@drawable/ic_gps_off_black_24dp"
        android:title="@string/title_gps" />

</menu>
